workshop04/istio-weather/weather-env.yml
---
apiVersion: v1 
kind: Namespace 
metadata:
  name: istio-weather
  labels: 
    version: v1
