workshop04/istio-weather/weather-deploy-istio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: istio-weather-deploy
  name: istio-weather-deploy
  namespace: istio-weather
spec:
  minReadySeconds: 5
  replicas: 1
  selector:
    matchLabels:
      name: istio-weather-pod
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/interceptionMode: REDIRECT
        sidecar.istio.io/status: '{"version":"612b89ee7fc4d43b232ad46b2bcfabf2aa465234c90d6f4a9ed05744657f3c8e","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"],"imagePullSecrets":null}'
        traffic.sidecar.istio.io/excludeInboundPorts: "15020"
        traffic.sidecar.istio.io/includeInboundPorts: "3000"
        traffic.sidecar.istio.io/includeOutboundIPRanges: '*'
      creationTimestamp: null
      labels:
        name: istio-weather-pod
        security.istio.io/tlsMode: istio
      name: istio-weather-pod
    spec:
      containers:
      - env:
        - name: APP_ID
          valueFrom:
            secretKeyRef:
              key: weather-api-key
              name: istio-weather-secret
        image: stackupiss/weather:v1
        imagePullPolicy: IfNotPresent
        name: istio-weather-container
        ports:
        - containerPort: 3000
          name: weather-port
        resources: {}
      - args:
        - proxy
        - sidecar
        - --domain
        - $(POD_NAMESPACE).svc.cluster.local
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - istio-weather-deploy.istio-weather
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:15010
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --dnsRefreshRate
        - 300s
        - --connectTimeout
        - 10s
        - --proxyAdminPort
        - "15000"
        - --concurrency
        - "2"
        - --controlPlaneAuthPolicy
        - NONE
        - --statusPort
        - "15020"
        - --applicationPorts
        - "3000"
        image: docker.io/istio/proxyv2:1.4.0
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        ports:
        - containerPort: 15090
          name: http-envoy-prom
          protocol: TCP
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /healthz/ready
            port: 15020
          initialDelaySeconds: 1
          periodSeconds: 2
        resources:
          limits:
            cpu: "2"
            memory: 1Gi
          requests:
            cpu: 10m
            memory: 40Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: istio-weather-svc
  namespace: istio-weather
  labels:
    name: istio-weather-svc
spec:
  type: ClusterIP
  selector:
    name: istio-weather-pod
  ports:
  - name:  istio-weather-svc-port
    port: 80
    targetPort: weather-port
---
