workshop04/istio-weather/weather-gateway.yml
apiVersion: networking.istio.io/v1alpha3

kind: Gateway

metadata:
   name: weather-ingress
   namespace: istio-weather
spec:
   selector:
      istio: ingressgateway
   servers:
   - hosts:
      - "weather.157.230.194.69.nip.io"
     port:
        number: 80
        protocol: HTTP
        name: HTTP
