workshop04/istio-weather/weather-virtualserver.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
   name: weather-ingress-vs
   namespace: istio-weather

spec:
   hosts:
   - "*"
   gateways:
   - weather-ingress
   http:
   -  match:
      - uri:
         prefix: "/"
      route:
         - destination:
            host: istio-weather-svc
            port: 
               number: 80 #kubernetes service port number
